--- a/style.css
+++ b/style.css
@@ -1,21 +1,43 @@
 body {
 	text-align: center;
-	background:url("chalkboard.jpg")no-repeat;
-
+	background-image: url("chalkboard.jpg");
+	background-size: cover;
+	color: #F5DEB3;
+	font-size: 24px;
 }
-h1, h3 {
+div{ 
+	background-color: rgba(0,0,0,.5);
+}
+	
+#schoolname{
+	font-size: 42px;
 	font-weight: bold;
 	color: #F5DEB3;
-	font-family: "Georgia"
+	font-family: "Georgia";
 }
-#slogan {
+
+
+h3 {
+	font-weight: bold;
+	color: #F5DEB3;
+	font-family: "Georgia";
+	font-size: 24px;
+}
+
+h2 {
 	font-style: italic;
-	font-size: 24px
+	font-size: 24px;
+	color: #F5DEB3;
+
 }
-p{
+
+p {
 	color: #FFF8DC;
 	font-family: "Gill Sans";
 }
-ul {color: #FFF8DC;
+
+ul {
+	color: #FFF8DC;
 	font-family: "Gill Sans";
+	list-style: none;
 }
